feat(teme-toggle): add dark/light theme-toggle

--- a/app/globals.css
+++ b/app/globals.css
@@ -151,7 +151,7 @@
   }
 
   .shad-active {
-    @apply text-black font-semibold bg-amber-200 ;
+    @apply font-semibold underline;
   }
   /* Header */
 }
